--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <input
               type="text"
               id="responsibles"
-              placeholder="Enter responsibles by comma"
+              placeholder="Enter person names by comma"
             />
           </div>
           <button class="btn" id="add" type="submit">Add</button>
